feat: Implement test mode of stubs processing.